--- a/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
@@ -158,12 +158,17 @@
   <string name="click_to_save">Dodirnite \"Gotovo\" za postavljanje općenite melodije zvona.</string>
   <string name="closed_high_refresh_options">Aplikacije ne koriste visoku stopu osvježavanja</string>
   <string name="close">Zatvori</string>
-  <string name="close_use_pad">Pomno gledam</string>
+  <string name="close_use_device">Gledanje izbliza</string>
+  <string name="close_use_device_desc">Dugo držanje uređaja vrlo blizu lica povećava rizik od kratkovidnosti i umora.</string>
+  <string name="close_use_device_remind_summary">Držite uređaj dalje od lica</string>
+  <string name="close_use_device_remind_title">Preblizu</string>
+  <string name="close_use_device_tip">Držite uređaj dalje od lica</string>
+  <string name="close_use_pad">Gledanje izbliza</string>
   <string name="close_use_pad_desc">Dugotrajno držanje uređaja vrlo blizu lica povećava rizik od kratkovidnosti i umora.</string>
   <string name="close_use_pad_remind_summary">Držite uređaj dalje od lica</string>
   <string name="close_use_pad_remind_title">Preblizu</string>
   <string name="close_use_pad_tip">Držite uređaj dalje od lica</string>
-  <string name="close_use_phone">Pomno gledam</string>
+  <string name="close_use_phone">Gledanje izbliza</string>
   <string name="close_use_phone_desc">Dugotrajno držanje uređaja vrlo blizu lica povećava rizik od kratkovidnosti i umora.</string>
   <string name="close_use_phone_remind_summary">Držite uređaj dalje od lica</string>
   <string name="close_use_phone_remind_title">Preblizu</string>
@@ -175,27 +180,29 @@
   <string name="contact_description">Dodirnite prečac Poč. zaslona za upućivanje poziva</string>
   <string name="contact_title">Prečac kontakta</string>
   <string name="continue_time">Trajanje sesije</string>
-  <string name="continue_use_category_title">Ograničenje kontinuirane upotrebe</string>
-  <string name="continue_use_switch_title">Ograničite kontinuiranu upotrebu uređaja</string>
+  <string name="continue_use_category_title">Ograničenje kontinuiranog korištenja</string>
+  <string name="continue_use_switch_title">Ograničite kontinuirano korištenje uređaja</string>
   <string name="contrast_ratio">Kontrast</string>
   <string name="control_center_title">Vrijeme zaslona danas</string>
   <string name="control_center_title_new">Korišteno danas</string>
   <string name="copy">Kopiraj</string>
   <string name="correct_close_use_device_summary">Samo tako nastavite</string>
+  <string name="correct_close_use_device_title">"Tako je bolje"</string>
   <string name="correct_close_use_pad_title">"Tako je bolje"</string>
   <string name="correct_close_use_phone_title">"Tako je bolje"</string>
   <string name="correct_dark_light_use_device_title">"Tako je bolje"</string>
+  <string name="correct_dark_light_use_device_summary">Samo tako nastavite</string>
   <string name="correct_dark_light_use_pad_summary">Samo tako nastavite</string>
   <string name="correct_dark_light_use_phone_summary">Samo tako nastavite</string>
   <string name="correct_lying_use_device_success_summary">Samo tako nastavite</string>
   <string name="correct_lying_use_device_success_title">Odlično</string>
   <string name="correct_over">Gotovo</string>
   <string name="correct_overuse_title">Dobar posao</string>
-  <string name="current_week_app_usage_statistics">"Ovotjedna upotreba aplikacije"</string>
-  <string name="current_week_category_usage_statistics">"Ovotjedna upotreba aplikacije po kategoriji"</string>
-  <string name="current_week_eyes_usage">"Ovotjedno gledanje zaslona"</string>
-  <string name="current_week_screen_time_usage">"Ovaj tjedan vremena korištenja"</string>
-  <string name="current_week_unhealthy_habits_statistics">"Ovog tjedna nezdravo gledanje zaslona"</string>
+  <string name="current_week_app_usage_statistics">"Korištenje aplikacije ovaj tjedan"</string>
+  <string name="current_week_category_usage_statistics">"Korištenje aplikacije ovaj tjedan po kategoriji"</string>
+  <string name="current_week_eyes_usage">"Gledanje zaslona ovaj tjedan"</string>
+  <string name="current_week_screen_time_usage">"Vrijeme korištenja ovaj tjedan"</string>
+  <string name="current_week_unhealthy_habits_statistics">"Nezdravo gledanje zaslona ovaj tjedan"</string>
   <string name="crazy_mode">Ultra način</string>
   <string name="create">Izradi</string>
   <string name="create_failed">"Ne mogu izraditi"</string>
@@ -209,7 +216,11 @@
   <string name="customize_radio_btn_summary">Preferirana odabrana brzina osvježavanja</string>
   <string name="customize_radio_btn_title">Vlastito</string>
   <string name="dall_sheep">Dall sheep</string>
+  <string name="dark_light_use_device">Slabo osvjetljenje</string>
+  <string name="dark_light_use_device_desc">Korištenje uređaja u slabo osvijetljenom okruženju može uzrokovati ozbiljno naprezanje očiju.</string>
+  <string name="dark_light_use_device_remind_summary">Koristite uređaj u svjetlijem okruženju</string>
   <string name="dark_light_use_device_remind_title">Prigušeno svjetlo</string>
+  <string name="dark_light_use_device_tip">Koristite uređaj u svjetlijem okruženju</string>
   <string name="dark_light_use_pad">Slabo svjetlo</string>
   <string name="dark_light_use_pad_desc">Korištenje vašeg uređaja u slabo osvijetljenom okruženju može uzrokovati ozbiljno naprezanje očiju.</string>
   <string name="dark_light_use_pad_remind_summary">Koristite svoj uređaj u svjetlijem okruženju</string>
@@ -412,7 +423,7 @@ nije generirana u Drugom prostoru"</string>
   <string name="hsv_space_color_saturation">Zasićenje</string>
   <string name="hsv_space_color_value">Vrijednost</string>
   <string name="ignore_remind">Zanemari</string>
-  <string name="in_forbidden_period">Upotreba je sada ograničena</string>
+  <string name="in_forbidden_period">Korištenje je sada ograničeno</string>
   <string name="intelligent_radio_btn_summary">Dinamički prilagodite brzinu osvježavanja na temelju scenarija kako biste uravnotežili performanse s potrošnjom energije</string>
   <string name="intelligent_radio_btn_title">Zadano (preporučeno)</string>
   <string name="intelligent_recognition_item_summary">Koristite označenu melodiju zvona za pozive iz dostavnih i taxi usluga. Ova će značajka raditi kada je %s postavljen kao zadana melodija zvona.</string>
@@ -446,23 +457,23 @@ nije generirana u Drugom prostoru"</string>
   <string name="kinkajou">Kinkajou</string>
   <string name="kinkajou_info">Kinkajou je poznat po svojim noćnim navikama i potpuno prekrivenom repu.</string>
   <string name="koala">Koala</string>
-  <string name="last_30_day_app_usage_statistics">"Upotreba aplikacije u proteklih %d dana"</string>
-  <string name="last_30_day_category_usage_statistics">"Upotreba aplikacije u proteklih %d dana prema kategoriji"</string>
+  <string name="last_30_day_app_usage_statistics">"Korištenje aplikacije u proteklih %d dana"</string>
+  <string name="last_30_day_category_usage_statistics">"Korištenje aplikacije u proteklih %d dana prema kategoriji"</string>
   <string name="last_30_day_eyes_usage">"Gledanje zaslona proteklih %d dana"</string>
   <string name="last_30_day_screen_time_usage">"Proteklih %d dana vremena korištenja"</string>
   <string name="last_30_day_unhealthy_habits_statistics">"U protekla %d dana nezdravo gledanje zaslona"</string>
-  <string name="last_7_day_app_usage_statistics">"Upotreba aplikacije u proteklih %d dana"</string>
-  <string name="last_7_day_category_usage_statistics">"Upotreba aplikacije u protekla %d dana prema kategoriji"</string>
+  <string name="last_7_day_app_usage_statistics">"Korištenje aplikacije u proteklih %d dana"</string>
+  <string name="last_7_day_category_usage_statistics">"Korištenje aplikacije u protekla %d dana prema kategoriji"</string>
   <string name="last_7_day_eyes_usage">"Gledanje zaslona proteklih %d dana"</string>
   <string name="last_7_day_screen_time_usage">"Proteklih %d dana vremena korištenja"</string>
   <string name="last_7_day_unhealthy_habits_statistics">"U protekla %d dana nezdravo gledanje zaslona"</string>
-  <string name="last_day_app_usage_statistics">"Jučerašnja upotreba aplikacije"</string>
-  <string name="last_day_category_usage_statistics">"Jučerašnja upotreba aplikacije po kategoriji"</string>
+  <string name="last_day_app_usage_statistics">"Jučerašnje korištenje aplikacije"</string>
+  <string name="last_day_category_usage_statistics">"Jučerašnje korištenje aplikacije po kategoriji"</string>
   <string name="last_day_eyes_usage">"Jučerašnje gledanje zaslona"</string>
   <string name="last_day_screen_time_usage">"Jučerašnje vrijeme korištenja"</string>
   <string name="last_day_unhealthy_habits_statistics">"Jučerašnje nezdravo gledanje zaslona"</string>
-  <string name="last_week_app_usage_statistics">"Upotreba aplikacije prošli tjedan"</string>
-  <string name="last_week_category_usage_statistics">"Upotreba aplikacije prošli tjedan po kategoriji"</string>
+  <string name="last_week_app_usage_statistics">"Korištenje aplikacije prošli tjedan"</string>
+  <string name="last_week_category_usage_statistics">"Korištenje aplikacije prošli tjedan po kategoriji"</string>
   <string name="last_week_eyes_usage">Vrijeme provedeno koristeći oči prošlog tjedna</string>
   <string name="last_week_screen_time_usage">"Prošlotjedno vrijeme korištenja"</string>
   <string name="last_week_unhealthy_habits_statistics">"Prošlotjedno nezdravo gledanje ekrana"</string>
@@ -499,7 +510,11 @@ nije generirana u Drugom prostoru"</string>
   <string name="low_flicker_mode">Slabo osvjetljenje</string>
   <string name="low_flicker_mode_summary">Spriječite treperenje u uvjetima slabog osvjetljenja kako biste smanjili naprezanje očiju</string>
   <string name="low_fps_description">Niža stopa osvježavanja zaslona. Niža potrošnja energije.</string>
-  <string name="low_light_preview">Pregled slabog osvjetljenja</string>
+  <string name="low_light_preview">Pregled pri slabom osvjetljenju</string>
+  <string name="lying_use_device">Ležanje</string>
+  <string name="lying_use_device_desc">Dugotrajno korištenje uređaja dok ležite može uzrokovati naprezanje očiju.</string>
+  <string name="lying_use_device_remind_summary">Vježbajte dobre navike kako biste zaštitili svoj vid</string>
+  <string name="lying_use_device_tip">Ležanje tijekom korištenja uređaja može uzrokovati naprezanje očiju</string>
   <string name="mi_transfer_banner_summary">Podržano je više marki uređaja</string>
   <string name="mi_transfer_banner_title">Prenesite stavke sa svog starog uređaja</string>
   <string name="marabou_stork">Marabou roda</string>
@@ -1012,9 +1027,11 @@ Povući suglasnost sada?"</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
+  <string name="time_limit_period_summary">"Postavili ste ovo vremensko razdoblje tako da se uređaj ne može koristiti"</string>
+  <string name="time_limit_period_title">Nije dostupno</string>
   <string name="time_over_back_home">Početni zaslon</string>
   <string name="time_over_delayed_use">Zanemari</string>
-  <string name="time_over_not_delayed_use">Shvaćam</string>
+  <string name="time_over_not_delayed_use">Razumijem</string>
   <string name="time_over_today">"Nema više vremena
 za danas"</string>
   <string name="time_over_today_use">"Današnje sesije: "</string>
@@ -1097,10 +1114,10 @@ za danas"</string>
   <string name="usage_device_limit_app_prolong_time3">Dodaj 60 minuta</string>
   <string name="usage_device_limit_app_prolong_time4">"Ne ograničavaj danas"</string>
   <string name="usage_device_limit_app_prolong_time5">Dodaj vrijeme jednom</string>
-  <string name="usage_device_limit_forbidden_period">Upotreba je ograničena između %1$s i %2$s</string>
-  <string name="usage_device_limit_notifation_summary_start">"Dosegnut ćete svoj limit za %1$s"</string>
+  <string name="usage_device_limit_forbidden_period">Korištenje je ograničeno između %1$s i %2$s</string>
+  <string name="usage_device_limit_notifation_summary_start">"Dosegnut ćete svoje ograničenje za %1$s"</string>
   <string name="usage_device_limit_notifation_title">Preostalo vrijeme danas</string>
-  <string name="usage_device_limit_start_forbidden_period">Upotreba će biti ograničena između %1$s i %2$s (%3$s preostalo)</string>
+  <string name="usage_device_limit_start_forbidden_period">Korištenje će biti ograničeno između %1$s i %2$s (%3$s preostalo)</string>
   <string name="usage_device_limit_time_over">"Dosegli ste današnje ograničenje (%1$s)"</string>
   <string name="usage_exit">Izlaz</string>
   <string name="usage_focus_focus_premission_main_summary">Ova aplikacija mora pristupiti podacima vašeg računa kako bi zabilježila statistiku korištenja vašeg načina fokusiranja.</string>
@@ -1349,7 +1366,7 @@ Ova se aplikacija mora povezati s internetom i zahtijeva sljedeća dopuštenja d
   <string name="wednesday_short">Sri</string>
   <string name="wednesday_shortest">S</string>
   <string name="weekday_limit_category_title">Ograničenja radnim danima</string>
-  <string name="weekday_limit_switch_title">Ograniči upotrebu radnim danima</string>
+  <string name="weekday_limit_switch_title">Ograniči korištenje radnim danima</string>
   <string name="weekend_limit_category_title">Ograničenja za vikend</string>
   <string name="weekend_limit_switch_title">Ograničite korištenje vikendom</string>
   <string name="whipbird_eastern_whipbird">Istočni whipbird</string>
