--- a/Croatian/main/Contacts.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Contacts.apk/res/values-hr/strings.xml
@@ -296,6 +296,7 @@
   <string name="call_other_fax">Nazovi faks</string>
   <string name="call_pager">Nazovi pager</string>
   <string name="call_radio">"Nazovi radio"</string>
+  <string name="call_recording_seekbar">Traka napretka snimanja poziva</string>
   <string name="call_record_add_numbers">Dodajte telefonske brojeve</string>
   <string name="call_record_auto_always">Dodajte pozive</string>
   <string name="call_record_auto_scenario_title">Snimljeni pozivi</string>
